# cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json
.github/: labeler.yml  labels.yml  release-drafter.yml
.github/workflows/: labeler.yml  release-drafter.yml
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/: release-drafter.yml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml  deploy_docs.yml  labeler.yml  publish.yml  release-drafter.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/scripts/: main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  app.py  bootstrap.py  config.py  context.py  dependencies.py  logging.py  main.py  middleware.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/routers/: health_router.py  tags.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_bootstrap.py  test_context.py  test_dependencies.py  test_main.py  test_middleware.py
{{cookiecutter.project_name}}/tests/routers/: test_health_router.py
